# napari-segment-blobs-and-things-with-membranes

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: git-bob.yml  test_and_deploy.yml
.napari/: config.yml
docs/: Untitled1.ipynb  demo.ipynb  labeling.ipynb  skeletonize_labels.ipynb
napari_segment_blobs_and_things_with_membranes/: __init__.py  _bia_bob_plugins.py  _function.py
napari_segment_blobs_and_things_with_membranes/_tests/: test_function.py
