[metadata]
name = napari-segment-blobs-and-things-with-membranes
version = 0.2.2
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-segment-blobs-and-things-with-membranes
license = BSD-3-Clause
description = A plugin based on scikit-image for segmenting nuclei and cells based on fluorescent microscopy images with high intensity in nuclei and/or membranes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-segment-blobs-and-things-with-membranes/issues
    Documentation = https://github.com/haesleinhuepf/napari-segment-blobs-and-things-with-membranes#README.md
    Source Code = https://github.com/haesleinhuepf/napari-segment-blobs-and-things-with-membranes
    User Support = https://github.com/haesleinhuepf/napari-segment-blobs-and-things-with-membranes/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari
    scikit-image
    scipy
    napari-tools-menu

[options.entry_points] 
napari.plugin = 
    Segment (blobs and things with membranes) = napari_segment_blobs_and_things_with_membranes
